# Py16-web-hw07

./: pyproject.toml
BD-homework/: cli_crud.py  config.ini  queries.py
BD-homework/conf/: connect_db.py
BD-homework/migrations/versions/: 4ed5c84f6ee7_init.py
Example-BD-conspect/: alembic.ini  main.py  models.py  mynotes.db
Example-BD-conspect/alembic/versions/: 3c291b372753_init.py
Example-BD-lesson/: config.ini
Example-BD-lesson/conf/: db.py  models.py
Example-BD-lesson/migrations/: env.py
Example-BD-lesson/migrations/versions/: b6a283c7d1de_add_table_contacts.py  c18e040b0fce_init.py
Example-BD-lesson/seeds/: crud_after_contacts.py  crud_before_contacts.py  first_filling_db.py
