[tool.poetry]
name = "py16-web-hw07"
version = "0.1.0"
description = "Play with ORM SQLAlchemy"
authors = ["Maximus-22 <maksim.melnichenko@nservice.com.ua>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
faker = "^19.13.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
